# auto-claude-github

./: .claudeup.example.json  .gitignore  CHANGELOG.md  LICENSE  README.md  claudeup  claudeup.py  pyproject.toml  setup.py
examples/: batch-create.sh  setup-python-project.sh
