[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudeup"
version = "1.0.0"
description = "Automate GitHub repository creation for Claude Code Web"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ClaudeUp Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "matplotlib>=3.5.0",
]

[project.scripts]
claudeup = "claudeup:main"

[project.urls]
Homepage = "https://github.com/yourusername/claudeup"
Repository = "https://github.com/yourusername/claudeup"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["claudeup.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
